demo-environment/0-setup/minishift/ingress/postgres-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-ingress
spec:
  ports:
  - name: pgql
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: postgres-ingress
